--- a/app/templates/news_tracker.html
+++ b/app/templates/news_tracker.html
@@ -40,17 +40,13 @@
                                 <i class="ph ph-check"></i>
                                 <span>BBC News</span>
                             </div>
-                            <div class="dropdown-option" data-feed="http://rss.cnn.com/rss/edition.rss" data-name="CNN">
+                            <div class="dropdown-option" data-feed="https://feeds.bbci.co.uk/news/world/rss.xml" data-name="BBC World News">
                                 <i class="ph ph-check"></i>
-                                <span>CNN</span>
+                                <span>BBC World News</span>
                             </div>
-                            <div class="dropdown-option" data-feed="http://feeds.reuters.com/Reuters/worldNews" data-name="Reuters World">
+                            <div class="dropdown-option" data-feed="https://rss.nytimes.com/services/xml/rss/nyt/HomePage.xml" data-name="NY Times">
                                 <i class="ph ph-check"></i>
-                                <span>Reuters World</span>
-                            </div>
-                            <div class="dropdown-option" data-feed="https://www.theguardian.com/world/rss" data-name="The Guardian">
-                                <i class="ph ph-check"></i>
-                                <span>The Guardian</span>
+                                <span>NY Times</span>
                             </div>
 
                             <div class="dropdown-divider"></div>
@@ -61,7 +57,7 @@
                                 <i class="ph ph-check"></i>
                                 <span>Wired</span>
                             </div>
-                            <div class="dropdown-option" data-feed="http://feeds.feedburner.com/TechCrunch/" data-name="TechCrunch">
+                            <div class="dropdown-option" data-feed="https://techcrunch.com/feed/" data-name="TechCrunch">
                                 <i class="ph ph-check"></i>
                                 <span>TechCrunch</span>
                             </div>
@@ -69,9 +65,9 @@
                                 <i class="ph ph-check"></i>
                                 <span>The Verge</span>
                             </div>
-                            <div class="dropdown-option" data-feed="https://news.ycombinator.com/rss" data-name="Hacker News">
+                            <div class="dropdown-option" data-feed="https://www.cnet.com/rss/news/" data-name="CNET">
                                 <i class="ph ph-check"></i>
-                                <span>Hacker News</span>
+                                <span>CNET</span>
                             </div>
 
                             <div class="dropdown-divider"></div>
@@ -82,30 +78,26 @@
                                 <i class="ph ph-check"></i>
                                 <span>Forbes Business</span>
                             </div>
-                            <div class="dropdown-option" data-feed="https://www.cnbc.com/id/100003114/device/rss/rss.html" data-name="CNBC">
+                            <div class="dropdown-option" data-feed="https://search.cnbc.com/rs/search/combinedcms/view.xml?partnerId=wrss01&id=10001147" data-name="CNBC Top News">
                                 <i class="ph ph-check"></i>
-                                <span>CNBC</span>
-                            </div>
-                            <div class="dropdown-option" data-feed="https://www.businessinsider.com/rss" data-name="Business Insider">
-                                <i class="ph ph-check"></i>
-                                <span>Business Insider</span>
+                                <span>CNBC Top News</span>
                             </div>
 
                             <div class="dropdown-divider"></div>
 
                             <!-- Sports -->
                             <div class="dropdown-header">Sports</div>
-                            <div class="dropdown-option" data-feed="https://www.espn.com/espn/rss/news" data-name="ESPN">
-                                <i class="ph ph-check"></i>
-                                <span>ESPN</span>
-                            </div>
                             <div class="dropdown-option" data-feed="https://feeds.bbci.co.uk/sport/rss.xml" data-name="BBC Sport">
                                 <i class="ph ph-check"></i>
                                 <span>BBC Sport</span>
                             </div>
-                            <div class="dropdown-option" data-feed="https://theathletic.com/feed/" data-name="The Athletic">
+                            <div class="dropdown-option" data-feed="https://feeds.bbci.co.uk/sport/football/rss.xml" data-name="BBC Football">
                                 <i class="ph ph-check"></i>
-                                <span>The Athletic</span>
+                                <span>BBC Football</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://www.skysports.com/rss/12040" data-name="Sky Sports">
+                                <i class="ph ph-check"></i>
+                                <span>Sky Sports</span>
                             </div>
 
                             <div class="dropdown-divider"></div>
@@ -116,10 +108,6 @@
                                 <i class="ph ph-check"></i>
                                 <span>Variety</span>
                             </div>
-                            <div class="dropdown-option" data-feed="https://www.rollingstone.com/music/music-news/feed/" data-name="Rolling Stone">
-                                <i class="ph ph-check"></i>
-                                <span>Rolling Stone</span>
-                            </div>
                             <div class="dropdown-option" data-feed="https://deadline.com/feed/" data-name="Deadline">
                                 <i class="ph ph-check"></i>
                                 <span>Deadline</span>
@@ -129,26 +117,34 @@
 
                             <!-- Gaming -->
                             <div class="dropdown-header">Gaming</div>
-                            <div class="dropdown-option" data-feed="https://www.polygon.com/feed/pc/" data-name="Polygon">
+                            <div class="dropdown-option" data-feed="https://www.pcgamer.com/rss/" data-name="PC Gamer">
+                                <i class="ph ph-check"></i>
+                                <span>PC Gamer</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://www.polygon.com/rss/index.xml" data-name="Polygon">
                                 <i class="ph ph-check"></i>
                                 <span>Polygon</span>
                             </div>
-                            <div class="dropdown-option" data-feed="https://feeds.feedburner.com/thatvideogameblog" data-name="That VideoGame Blog">
+                            <div class="dropdown-option" data-feed="https://kotaku.com/rss" data-name="Kotaku">
                                 <i class="ph ph-check"></i>
-                                <span>That VideoGame Blog</span>
+                                <span>Kotaku</span>
                             </div>
 
                             <div class="dropdown-divider"></div>
 
-                            <!-- Science -->
-                            <div class="dropdown-header">Science</div>
-                            <div class="dropdown-option" data-feed="https://www.nasa.gov/rss/dyn/breaking_news.rss" data-name="NASA">
+                            <!-- Science & Space -->
+                            <div class="dropdown-header">Science & Space</div>
+                            <div class="dropdown-option" data-feed="https://www.space.com/feeds/all" data-name="Space.com">
                                 <i class="ph ph-check"></i>
-                                <span>NASA Breaking News</span>
+                                <span>Space.com</span>
                             </div>
-                            <div class="dropdown-option" data-feed="https://www.scientificamerican.com/feed/" data-name="Scientific American">
+                            <div class="dropdown-option" data-feed="https://www.livescience.com/feeds/all" data-name="Live Science">
                                 <i class="ph ph-check"></i>
-                                <span>Scientific American</span>
+                                <span>Live Science</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://www.popsci.com/feed/" data-name="Popular Science">
+                                <i class="ph ph-check"></i>
+                                <span>Popular Science</span>
                             </div>
                         </div>
                     </div>
